--- a/.github/workflows/mikrotik_patch_6.yml
+++ b/.github/workflows/mikrotik_patch_6.yml
@@ -74,9 +74,9 @@ jobs:
         BUILD_TIME=${{ needs.Set_BuildTime.outputs.BUILD_TIME }}
         echo Build Time:$BUILD_TIME
         ### wget -nv -O CHANGELOG https://${{ env.MIKRO_UPGRADE_URL }}/routeros/$LATEST_VERSION/CHANGELOG
-        cat CHANGELOG
-        echo "LATEST_VERSION=${LATEST_VERSION}" >> $GITHUB_ENV
-        echo "BUILD_TIME=${BUILD_TIME}" >> $GITHUB_ENV
+  #      cat CHANGELOG
+  #      echo "LATEST_VERSION=${LATEST_VERSION}" >> $GITHUB_ENV
+  #      echo "BUILD_TIME=${BUILD_TIME}" >> $GITHUB_ENV
 
  
     - name: Cache mikrotik-${{ env.LATEST_VERSION }}.iso
