--- a/.github/workflows/mikrotik_patch_6.yml
+++ b/.github/workflows/mikrotik_patch_6.yml
@@ -73,10 +73,10 @@ jobs:
         echo "has_new_version=true" >> $GITHUB_OUTPUT
         BUILD_TIME=${{ needs.Set_BuildTime.outputs.BUILD_TIME }}
         echo Build Time:$BUILD_TIME
-        ### wget -nv -O CHANGELOG https://${{ env.MIKRO_UPGRADE_URL }}/routeros/$LATEST_VERSION/CHANGELOG
-  #      cat CHANGELOG
-  #      echo "LATEST_VERSION=${LATEST_VERSION}" >> $GITHUB_ENV
-  #      echo "BUILD_TIME=${BUILD_TIME}" >> $GITHUB_ENV
+        wget -nv -O CHANGELOG https://${{ env.MIKRO_UPGRADE_URL }}/routeros/$LATEST_VERSION/CHANGELOG
+        cat CHANGELOG
+        echo "LATEST_VERSION=${LATEST_VERSION}" >> $GITHUB_ENV
+        echo "BUILD_TIME=${BUILD_TIME}" >> $GITHUB_ENV
 
  
     - name: Cache mikrotik-${{ env.LATEST_VERSION }}.iso
